--- a/templates/join.html
+++ b/templates/join.html
@@ -23,5 +23,19 @@
             <input type = "submit" value = "submit"/><br/> 
         </form> 
 </div>
+<!-- <div class="wrapper" style="margin-top:1em;">
+        <form method="POST">
+            <label>breakfast:</label>
+            <input type="name" name="breakfast" placeholder="enter" required><br/>
+            <label>lunch:</label>
+            <input type="name" name="lunch" placeholder="enter" required><br/>
+            <label>dinner:</label>
+            <input type="name" name="dinnner" placeholder="enter" required><br/>
+            <label>snacks:</label>
+            <input type="name" name="snacks" placeholder="enter" required><br/>
+            <input type = "submit" value = "submit"/><br/>
+        </form>
+</div> -->
+
     </body> 
 </html>
