--- a/templates/participants.html
+++ b/templates/participants.html
@@ -1,4 +1,4 @@
-
+\
 <!DOCTYPE html> 
 <html> 
     <head>
@@ -28,11 +28,31 @@
                  <td>{{participant[0]}}</td> 
                  <td>{{participant[1]}}</td> 
                  <td>{{participant[2]}}</td> 
-                 <td>{{participant[3]}}</td> 
-                 <td>{{participant[4]}}</td> 
+                 <td>{{participant[3]}}</td>
+		 <td>{{participant[4]}}</td> 
                 </tr> 
             {%endfor%} 
           </table>           
 </div>
+<!-- <div class="wrapper">
+        <table style="width:100%">
+            <tr>
+              <th>date</th>
+              <th>mood</th>
+              <th>headache</th>
+              <th>period</th>
+              <th>other</th>
+            </tr>
+            {%for participant in meal%}
+               <tr>
+                 <td>{{participant[0]}}</td>
+                 <td>{{participant[1]}}</td>
+                 <td>{{participant[2]}}</td>
+                 <td>{{participant[3]}}</td>
+                </tr>
+            {%endfor%}
+          </table>
+</div> -->
+
     </body> 
 </html> 
