--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 	<div class="wrapper">
         	<h1>Journal</h1> 
         	<button class="btn" type="button" onclick="window.location.href='{{ url_for('join') }}';">Fill form to get updates</button><br/> 
+		<button class="btn" type="button" onclick="window.location.href='{{ url_for('food') }}';">Fill food form</button><br/> 
         	<button class="btn" type="button" onclick="window.location.href='{{ url_for('participants') }}';">Check participant list</button> 
 	</div>
     </body> 
