--- a/templates/participants.html
+++ b/templates/participants.html
@@ -29,11 +29,17 @@
                  <td>{{participant[1]}}</td> 
                  <td>{{participant[2]}}</td> 
                  <td>{{participant[3]}}</td>
-		 <td>{{participant[4]}}</td> 
+		 <td>{{participant[4]}}</td>
+  	       	<td>{{participant[5]}}</td>
+                 <td>{{participant[6]}}</td>
+                 <td>{{participant[7]}}</td>
+                 <td>{{participant[8]}}</td>
+                 <td>{{participant[9]}}</td>
+ 
                 </tr> 
             {%endfor%} 
           </table>           
-</div>
+<!-- </div>
 <div class="wrapper">
         <table style="width:100%">
             <tr>
@@ -53,7 +59,7 @@
 		</tr>
             {%endfor%}
           </table>
-</div>
+</div> -->
 
     </body> 
 </html> 
