--- a/templates/participants.html
+++ b/templates/participants.html
@@ -21,7 +21,12 @@
               <th>mood</th> 
               <th>headache</th> 
               <th>period</th> 
-              <th>other</th> 
+              <th>other</th>
+	      <th>date-2</th>
+	      <th>breakfast</th>
+	      <th>lunch</th>
+	      <th>dinner</th>
+	      <th>snacks</th> 
             </tr> 
             {%for participant in data%} 
                <tr> 
