--- a/templates/participants.html
+++ b/templates/participants.html
@@ -22,7 +22,7 @@
               <th>headache</th> 
               <th>period</th> 
               <th>other</th>
-	      <th>date-2</th>
+<!--	      <th>date-2</th> -->
 	      <th>breakfast</th>
 	      <th>lunch</th>
 	      <th>dinner</th>
@@ -35,7 +35,7 @@
                  <td>{{participant[2]}}</td> 
                  <td>{{participant[3]}}</td>
 		 <td>{{participant[4]}}</td>
-  	       	<td>{{participant[5]}}</td>
+  	       <!--	<td>{{participant[5]}}</td> -->
                  <td>{{participant[6]}}</td>
                  <td>{{participant[7]}}</td>
                  <td>{{participant[8]}}</td>
