--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
         	<h1>Journal</h1> 
         	<button class="btn" type="button" onclick="window.location.href='{{ url_for('join') }}';">Fill form to get updates</button><br/> 
 		<button class="btn" type="button" onclick="window.location.href='{{ url_for('food') }}';">Fill food form</button><br/> 
-        	<button class="btn" type="button" onclick="window.location.href='{{ url_for('participants') }}';">Check participant list</button> 
+        	<button class="btn" type="button" onclick="window.location.href='{{ url_for('participants') }}';">Check participant list</button></br>
+		<button class="btn" type="button" onclick="window.location.href='{{ url_for('search') }}';">Search</button>
 	</div>
     </body> 
 </html> 
