--- a/templates/search.html
+++ b/templates/search.html
@@ -7,10 +7,44 @@
     </head>
     <body>
 	<form>
-            <input type="name" name="search" placeholder="enter" required><br/>
+            <input type="name" name="lookfor" placeholder="enter" required><br/>
             <input type = "submit" value = "submit"/><br/>
         </form>
 
-<p>{{search}}</p>
+<div class="wrapper">
+        <table style="width:100%">
+
+{{lookfor}}
+
+            <tr>
+              <th>date</th>
+              <th>mood</th>
+              <th>headache</th>
+              <th>period</th>
+              <th>other</th>
+<!--          <th>date-2</th> -->
+              <th>breakfast</th>
+              <th>lunch</th>
+              <th>dinner</th>
+              <th>snacks</th>
+            </tr>
+            {%for participant in data%}
+               <tr>
+                 <td>{{participant[0]}}</td>
+                 <td>{{participant[1]}}</td>
+                 <td>{{participant[2]}}</td>
+                 <td>{{participant[3]}}</td>
+                 <td>{{participant[4]}}</td>
+               <!--     <td>{{participant[5]}}</td> -->
+                 <td>{{participant[6]}}</td>
+                 <td>{{participant[7]}}</td>
+                 <td>{{participant[8]}}</td>
+                 <td>{{participant[9]}}</td>
+
+                </tr>
+            {%endfor%}
+          </table>
+
+
     </body>
 </html>
