--- a/templates/search.html
+++ b/templates/search.html
@@ -6,7 +6,8 @@
         <title>Journal</title>
     </head>
     <body>
-	<form>
+	
+	<form method="POST">
             <input type="name" name="lookfor" placeholder="enter" required><br/>
             <input type = "submit" value = "submit"/><br/>
         </form>
